--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ playServicesLocation = "21.3.0"
 gson = "2.13.2"
 junitJupiter = "6.0.2"
 mlkit = "16.0.1"
+ucrop = "2.2.11"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,6 +46,7 @@ play-services-location = { group = "com.google.android.gms", name = "play-servic
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
 mlkit = { group = "com.google.mlkit", name = "text-recognition", version.ref = "mlkit" }
+ucrop = { group = "com.github.yalantis", name = "ucrop", version.ref = "ucrop" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
